--- a/css/style.css
+++ b/css/style.css
@@ -45,6 +45,9 @@ body {
   display: flex;
   flex-direction: column;
 }
+div.check.error{
+  color: #ff3860;
+}
 
 .input-control input {
   border: 2px solid #f0f0f0;
